# joogle

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  compose.yml  diesel.toml  diesel_migrate.sh  docker-compose.yml  index_db.db-journal  migrate.sh  prepare-apps.sh  start.sh  urllist.json
api_testing/: Get Search UI.bru  Submit URLs to index.bru  bruno.json
apps/search_console/: index.html  package.json  pnpm-lock.yaml  prepare_server_hosting.sh  vite.config.ts
apps/search_console/src/: index.tsx
apps/search_console/src/components/: domains_list.tsx  popup.tsx
apps/search_console/src/db/: analytics.ts  supabase.ts
apps/search_console/src/db/resources/: domain_data.ts
apps/search_console/src/hooks/: use_stats.ts
apps/search_console/src/pages/: auth.tsx  domain.tsx  index.tsx  jobs.tsx  layout.tsx  new.tsx
migrations/2025-06-12-005255_domains/: up.sql
src/: data_pool.rs  error.rs  indexing.rs  macros.rs  main.rs  models.rs  sanitize.rs  schema.rs  searching.rs
src/api/: get_queue.rs  mod.rs  ownership.rs
src/db/: _[word].rs  domains.rs  jwt_auth.rs  local.rs  mod.rs  sites.rs
src/debug/: gatherers.rs  mod.rs  routes.rs
src/indexer/: localization.rs  mod.rs  robots.rs  sitemaps.rs  url.rs
src/pages/: console.rs  indexing.rs  mod.rs  search.rs
src/pages/console/: iex.js  iex.rs  mod.rs  sublink.rs
src/schemas/: auth.rs  mod.rs  public.rs
src/templates/: indexing.rs  mod.rs  search.rs
static/: global.css  root.css  sc-index.html  search.css  search_old.css
static/assets/: index-DJcrk0TG.css  index-DOW6Yv8a.js
static/search_console/: index.html
static/search_console/assets/: index-CK2XD1A9.js
