[package]
name = "joogle"
version = "0.1.0"
edition = "2021"

[features]
default = ["debug", "smart_auto_queue", "experimental"]
auto_queue = []
robots_protocol = []
sitemaps_protocol = []
tar_gz_sitemaps = []
smart_auto_queue = ["auto_queue", "robots_protocol", "sitemaps_protocol"]
experimental = ["tar_gz_sitemaps"]
debug = ["auto_queue", "experimental"]

[dependencies]
lazy_static = "1.4.0"
maud = { version = "0.26.0", features = ["rocket"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
regex = "1.10.4"
rocket = { version = "0.5.1", features = ["json"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
scraper = "0.19.0"
surf = "2.3.2"
tar = "0.4.41"
tokio = "1.38.0"
url = "2.5.0"
url-escape = "0.1.1"
uuid = "1.8.0"
xml = "0.8.20"
